Update PhyloSpec Beast X tile and tiling files